Sorted the uneven rows and columns issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,10 @@ a:visited {
     text-decoration: none;
 }
 
+h1 {
+    font-size: 2rem;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -140,20 +144,39 @@ header .navicon::after {
     min-height: 240px;
 }
 
+.home-grid {
+    display: grid;
+    max-width: 1000px;
+    margin: 30px auto;
+    padding: 1rem;
+    grid-gap: 1.5rem;
+    grid-auto-rows: 1fr;
+    grid-auto-columns: 1fr;
+    grid-template-areas:
+                        'one'
+                        'one'
+                        'two'
+                        'three'
+                        'four'
+                        'five';
+}
+
 .grid-item {
     width: 100%;
-    height: 100%;
+    min-height: 200px;
     border-radius: 20px;
 }
 
 .grid-item:nth-child(1) {
     grid-area: one;
     background-color: blue;
+    text-align: center;
 }
 
 .grid-item:nth-child(2) {
     grid-area: two;
     background-color: rgb(255, 21, 0);
+    text-align: center;
 }
 
 .grid-item:nth-child(3) {
@@ -169,21 +192,6 @@ header .navicon::after {
 .grid-item:nth-child(5) {
     grid-area: five;
     background-color: rgb(68, 68, 98);
-}
-
-.home-grid {
-    display: grid;
-    height: 1000px;
-    max-width: 1000px;
-    margin: 30px auto;
-    padding: 1rem;
-    grid-gap: 1.5rem;
-    grid-template-areas:
-                        'one'
-                        'one'
-                        'three'
-                        'four'
-                        'five';
 }
 
 footer {
@@ -255,8 +263,8 @@ footer {
         grid-template-areas: 
                             'one one two'
                             'one one two'
-                            'three three four'
-                            'three three four'
-                            'five five .';
+                            'three four four'
+                            'three four four'
+                            'five five five';
     }
 }
